# PlaylistPros

./: .cache  README.md  pyproject.toml  setup.sql
Reference Files/: SpotifyApp.py  SpotifyAuth.py
Reference Files/testing/: get_access_token.py  getting_started_apk.html  token.txt
Reference Files/testing/AffieldTests/: Authorization.py  app.py
Reference Files/testing/SRC/: .env  Authorization.py
src/React/: electron-main.js  package-lock.json  package.json
src/React/src/: App.css  App.jsx  Background.css  index.css  main.jsx
src/React/src/Styling/: glasseffect.css  requests.css  textinput.css
src/React/src/components/About/: About.jsx  TeamCard.jsx
src/React/src/components/Analytics/: AnalyticsInfo.jsx  ImageComponent.jsx
src/React/src/components/Home/: NavBar.jsx
src/React/src/components/LogIn/: LogInButton.jsx  LogInForm.jsx  Login.Module.css  SignUpButton.jsx  SignUpForm.jsx  Start.jsx  StartForm.jsx
src/React/src/components/Logo/: Logo.jsx  Module.Logo.css
src/React/src/components/Request/: SearchResults.jsx  SongController.jsx
src/React/src/components/Session/: Player.jsx  Queue.jsx  QueuedSong.jsx  SearchResults.jsx  SongController.jsx  Test.Button.css
src/React/src/components/SessionSelector/: CreateSession.jsx  Search.jsx  SessionSelection.jsx
src/React/src/pages/: AboutPage.jsx  AnalyticsPage.jsx  CurrentSessionPage.jsx  HomePage.jsx  LogInPage.jsx  RequestPage.jsx  SessionPage.jsx
src/backend/: .env  App.py  Authorization.py  DB_Queries.py  spotify_api_app.py
src/react/playlist-pros/: package-lock.json  package.json
