[tool.poetry]
name = "playlistpros"
version = "0.1.0"
description = ""
authors = ["LaneAffield <laneaffield@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.3.0"
flask = "^3.0.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
